--- a/gitea/app.ini
+++ b/gitea/app.ini
@@ -21,7 +21,7 @@ ROOT = /var/lib/gitea/data/gitea-repositories
 SSH_DOMAIN       = GITEADOMAIN
 DOMAIN           = GITEADOMAIN
 HTTP_PORT        = 3000
-ROOT_URL         = GITEADOMAIN
+ROOT_URL         = https://GITEADOMAIN
 DISABLE_SSH      = false
 SSH_PORT         = 22
 LFS_START_SERVER = true
