--- a/gitea/app.ini
+++ b/gitea/app.ini
@@ -32,10 +32,7 @@ OFFLINE_MODE     = false
 PATH = /var/lib/gitea/data/lfs
 
 [mailer]
-ENABLED = true
-HOST    = smtp.1blu.de
-FROM    = gitea <no-reply@digitalesklassenbuch.com>
-USER    = c303827_0-noreply
+ENABLED = false
 
 [service]
 REGISTER_EMAIL_CONFIRM            = true
