--- a/gitea/app.ini
+++ b/gitea/app.ini
@@ -33,6 +33,9 @@ PATH = /var/lib/gitea/data/lfs
 
 [mailer]
 ENABLED = false
+HOST    = smtp.1blu.de:465
+FROM    = gitea <no-reply@digitalesklassenbuch.com>
+USER    = nutzername
 
 [service]
 REGISTER_EMAIL_CONFIRM            = true
