--- a/gitea/app.ini
+++ b/gitea/app.ini
@@ -32,10 +32,10 @@ OFFLINE_MODE     = false
 PATH = /var/lib/gitea/data/lfs
 
 [mailer]
-ENABLED = false
-HOST    = smtp.1blu.de:465
-FROM    = gitea <no-reply@digitalesklassenbuch.com>
-USER    = nutzername
+ENABLED = true
+HOST    = smtp.meinMailServer.de:465
+FROM    = gitea <meineEmail@meinMailServer.de>
+USER    = MeinNutzernameFuerDenMailServer
 
 [service]
 REGISTER_EMAIL_CONFIRM            = true
