--- a/gitea/app.ini
+++ b/gitea/app.ini
@@ -34,7 +34,7 @@ PATH = /var/lib/gitea/data/lfs
 [mailer]
 ENABLED = true
 HOST    = smtp.meinMailServer.de:465
-FROM    = gitea <meineEmail@meinMailServer.de>
+FROM    = meineEmail@meinMailServer.de
 USER    = MeinNutzernameFuerDenMailServer
 
 [service]
