--- a/gitea/app.ini
+++ b/gitea/app.ini
@@ -33,9 +33,9 @@ PATH = /var/lib/gitea/data/lfs
 
 [mailer]
 ENABLED = true
-HOST    = smtp.meinMailServer.de:465
-FROM    = meineEmail@meinMailServer.de
-USER    = MeinNutzernameFuerDenMailServer
+HOST    = meinMailServer
+FROM    = meineEmail
+USER    = meinNutzername
 
 [service]
 REGISTER_EMAIL_CONFIRM            = true
