--- a/gitea/app.ini
+++ b/gitea/app.ini
@@ -36,6 +36,7 @@ ENABLED = true
 HOST    = meinMailServer
 FROM    = meineEmail
 USER    = meinNutzername
+PASSWD  = `meinPasswort`
 
 [service]
 REGISTER_EMAIL_CONFIRM            = true
