--- a/gitea/app.ini
+++ b/gitea/app.ini
@@ -36,7 +36,7 @@ ENABLED = true
 HOST    = meinMailServer
 FROM    = meineEmail
 USER    = meinNutzername
-PASSWD  = `meinPasswort`
+#PASSWD  = `meinPasswort`
 
 [service]
 REGISTER_EMAIL_CONFIRM            = true
