--- a/gitea/app.ini
+++ b/gitea/app.ini
@@ -33,9 +33,9 @@ PATH = /var/lib/gitea/data/lfs
 
 [mailer]
 ENABLED = true
-HOST    = meinMailServer
-FROM    = meineEmail
-USER    = meinNutzername
+#HOST    = meinMailServer
+#FROM    = meineEmail
+#USER    = meinNutzername
 #PASSWD  = `meinPasswort`
 
 [service]
