--- a/gitea/app.ini
+++ b/gitea/app.ini
@@ -32,7 +32,7 @@ OFFLINE_MODE     = false
 PATH = /var/lib/gitea/data/lfs
 
 [mailer]
-ENABLED = true
+#ENABLED = true
 #HOST    = meinMailServer
 #FROM    = meineEmail
 #USER    = meinNutzername
